--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -110,11 +110,11 @@ nav ul li a:hover {
 .hero {
   width: 100%;
   min-height: 95vh;
-  padding: 120px 5% 50px;
+  padding: 170px 5% 70px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  gap: 50px;
+  gap: 70px;
 }
 
 .hero-text h1 {
@@ -171,7 +171,7 @@ nav ul li a:hover {
 
 /* Hero Image */
 .hero-img img {
-  width: 380px;
+  width: 260px;
   border-radius: 25px;
   box-shadow: 0 20px 35px rgba(0,0,0,0.25);
   transition: 0.3s;
@@ -357,11 +357,11 @@ form button:hover {
   .hero {
     flex-direction: column-reverse;
     text-align: center;
-  }
+     }
 
   .hero-img img {
-    width: 70%;
-    max-width: 250px;
+    width: 150%;
+    max-width: 130px
   }
 
   .hero-text h1 {
